[package]
name = "private_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.1.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
ureq = { version = "*", features = ["json", "charset"] }
platform-dirs = "0.3.0"
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "winnt", "minwindef"] }
base64 = "0.13.0"
winreg = "0.10.1"
whome = "0.4.0"
public-ip = "0.2.1"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]