[package]
name = "stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
url = "2.2.2"
winreg = "0.10.1"
whoami = "1.2.1"
rand = "0.8.5"
reqwest = "0.11.11"
scraper = "0.13.0"
tokio = { version = "1.20.1", features = ["full"] }